--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -130,8 +130,9 @@
                     	</span>
                     </div>
                     <h3 class=""><strong>PHOTOSHOP & ILLUSTRATOR</strong></h3>
-                      <span class="skill_text">웹 및 앱 디자인<br>
-                      원하는 디자인을 자유롭게 구현</span>
+                      <span class="skill_text">웹 및 앱의
+                      원하는 디자인을 자유롭게 구현할 수 있습니다.
+                    프로그램 내의 기본적인 툴을 능숙하게 다룰 수 있습니다.</span>
                     </h3>
                   </div>
                   <div class="border border1"></div>
@@ -145,11 +146,11 @@
                       </span>
                     </div>
                     <h3 class="wow fadeInUp animated"><strong>HTML & CSS</strong></h3>
-                      <span class="skill_text">웹표준 및 웹 접근성에 준수하여<br>
-                      HTML 마크업과 반응형 웹 제작<br>
-                      크로스브라우징 및 브라우저 호환성 관리<br>
-                      BOOTSTRAP, SWIPER 등<br>
-                      다양한 플러그인 및 워드프레스 사용.</span>
+                      <span class="skill_text">웹표준 및 웹 접근성에 준수하여
+                      HTML 마크업과 반응형 웹을 제작하고
+                      크로스브라우징 및 브라우저 호환성 관리와
+                      BOOTSTRAP, SWIPER 등
+                      다양한 플러그인 및 워드프레스를 사용할 수 있습니다.</span>
                   </div>
                   <div class="border border1"></div>
                   <div class="border border2"></div>
@@ -162,9 +163,9 @@
                       </span>
                     </div>
                     <h3 class="wow fadeInUp animated"><strong>JAVASCRIPT & JQUERY</strong></h3>
-                    <span class="skill_text">JavaScript 기본 문법을 이해<br>
-                      jQuery를 사용하여 원하는 기능을 구현<br>
-                      jquery plugin 사용 및 코드 수정
+                    <span class="skill_text">JavaScript 기본 문법을 이해했으며
+                      jQuery를 사용하여 원하는 기능을 구현할 수 있고
+                      jquery plugin 사용 및 코드 수정이 가능합니다.
                     </span>
                   </div>
                   <div class="border border1"></div>
@@ -208,7 +209,7 @@
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/sidmool_main.png" alt="포트폴리오 작업물. 시드물 이미지" class="img-responsive">
-                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/work_f&b.html"></a>
+                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/work_sidmool.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
                           <a href="#"><strong>SIDMOOL</strong><br>천연화장품쇼핑몰<br>리뉴얼사이트</a>
@@ -222,7 +223,7 @@
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/dodream.png" alt="포트폴리오 작업물. dodream 이미지" class="img-responsive">
-                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/work_f&b.html"></a>
+                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/work_dodream.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
                           <a href="#"><strong>DODREAM</strong></a>
@@ -236,7 +237,7 @@
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/moote.png" alt="포트폴리오 작업물. moote 이미지" class="img-responsive">
-                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/work_f&b.html"></a>
+                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/work_moot.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
                           <a href="#">싱어송라이터<br><strong>MOOT</strong><br>소개페이지</a>
@@ -256,9 +257,8 @@
           <div class="container">
             <h2 class="wow fadeInUp animated"><a href="#">GET IN TOUCH</a></h2>
           <div class="wow fadeInUp animated contact_info">
-            <p>"Taking a look at my portfolio is appreciated.</p>
-            <P>Have any suggestion or interested in working together?</P>
-            <p>please do not hesitate to contact me.</p>
+            <p>"Taking a look  at  my portfolio  is  appreciated.</p>
+            <P>Have any suggestion or interested in working together?"</P>
             <ul>
               <li><i class="far fa-envelope"></i>jar3543@gmail.com</li>
               <li><i class="fas fa-phone"></i>010 6591 0763</li>
@@ -307,48 +307,6 @@
     <script src="js/loading.js"></script>
     <script src="js/portfolio.js"></script>
     	<script>
-      // var arrChartColor = ['#3325B0', '#3325B0', '#3325B0', '#3325B0', '#3325B0', '#3325B0'];
-			// $('.chart').each(function(idx, element) {
-			// 	$(element).easyPieChart({
-			// 		easing: 'easeOutBounce',
-			// 		barColor: arrChartColor[idx],
-			// 		trackColor: '#fff',
-			// 		lineWidth: 20,
-			// 		lineCap: 'square',
-			// 		scaleColor: '#666',
-			// 		size: 200,
-			// 		animate: 2000,
-			// 		onStep: function(from, to, percent) {
-			// 			$(this.el).find('.percent').text(Math.round(percent));
-			// 		}
-			// 	});
-      //
-			// });
-
-			// var chartBool = true;
-			// win.on('scroll', function() {
-			// 	var ts = $(this);
-			// 	var sct = ts.scrollTop();
-			// 	var s2 = $('.sec-2');
-			// 	var s2OffsetTop = s2.offset().top;
-      //
-			// 	if (sct >= s2OffsetTop - 100 && sct <= s2OffsetTop + 200) {
-			// 		if (chartBool) {
-			// 			$('.chart').each(function(idx, element) {
-			// 				var num = $(element).attr('data-percent');
-			// 				$('.chart').eq(idx).data('easyPieChart').disableAnimation().update(0).enableAnimation().update(num);
-      //
-			// 			});
-      //
-			// 			chartBool = false;
-			// 		}
-			// 	} else {
-			// 		chartBool = true;
-			// 	}
-			// });
-
-
-
 
     	$(function() {
     		$('.chart').easyPieChart({
@@ -362,68 +320,6 @@
     			chart.update(Math.random()*200-100);
     		});
     	});
-
-      $(document).ready(function(){
-        $('.chart').each(function() {
-          $(this).animate({
-            width:$(this).attr('data-percent')
-          },2000);
-
-          $(this).animate(
-            {left:$(this).attr('data-percent')},
-            {
-             duration: 2000,
-             step: function(now) {
-               var data = Math.round(now);
-               $(this).find('.percent').html(data);
-             }
-          });
-        });
-      });
-
-      // $(function(){
-      //
-      //
-      //     $(window).scroll(function(){
-      //
-      //         //update instance after 5 sec
-      //         if($(window).scrollTop() > $(window).height() + 1500) {
-      //           //create instance
-      //           $('.chart').easyPieChart({
-      //               animate: 2000
-      //           });
-      //         }
-      //     });
-      // });
-
-      // window.addEventListener('DOMContentLoaded', function() {
-      //   var charts = [];
-      //   [].forEach.call(document.querySelectorAll('.chart'),  function(el) {
-      //     charts.push(new EasyPieChart(el, options));
-      //   });
-      // });
-
-
-
-    //   $(function() {
-    //     $('.chart').easyPieChart({
-    //         //your options goes here
-    //         animate:{
-    //             duration:1000,
-    //             enabled:true
-    //         },
-    //     });
-    // });
-
-//     $(function() {
-//     // instantiate the plugin
-//     // update
-//     // $('.chart').data('easyPieChart').update(40);
-//     // disable animation
-//     // $('.chart').data('easyPieChart').disableAnimation();
-//     // enable animation
-//     // $('.chart').data('easyPieChart').enableAnimation();
-// });
 
     	</script>
   </body>
