--- a/AreumJeon/work_moot.html
+++ b/AreumJeon/work_moot.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>featured work - f&b</title>
+    <title>featured work - moot</title>
     <!-- <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -191,7 +191,7 @@
     .footer_btn span::before,
     .footer_btn span::after{content: '';position: absolute;width: 0%;height: 2.5px;
       top: 27px;margin-top: -0.5px;background: #fff;}
-    .footer_btn span:hover::before{background: #f3f377;width: 100%;
+    .footer_btn span:hover::before{background: red;width: 100%;
       transition: width 0.6s cubic-bezier(0.23,0.61,0.36,1);}
     .footer_btn span:hover::after{background: transparent;width: 100%;transition: 0s;}
     .footer_btn span::before{left: -2.5px;}
