--- a/AreumJeon/work_motte.html
+++ b/AreumJeon/work_motte.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>featured work - moot</title>
+    <title>featured work - motte</title>
     <!-- <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -307,8 +307,8 @@
             </dl>
             <!-- 사이트 링크 버튼,깃헙 링크 버튼 -->
             <div class="col-md-12 col-sm-12 col-xs-12 details_btn">
-              <a href="https://jar3543.github.io/github/F&B/F&B-000000.html" class="underlined">Demo<i class="fas fa-arrow-right"></i></a>
-              <a href="https://github.com/jar3543/github/tree/master/F%26B" class="underlined">github<i class="fas fa-arrow-right"></i></a>
+              <a href="https://jar3543.github.io/github/motte/motte.html" class="underlined">Demo<i class="fas fa-arrow-right"></i></a>
+              <a href="https://github.com/jar3543/github/tree/master/motte" class="underlined">github<i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
         </div>
@@ -340,9 +340,9 @@
 
     <!-- footerbar==========================================================-->
     <div class="wow fadeInUp animated footerbar">
-      <a href="#" class="footer_btn"><span>prev</span></a>
-      <a href="#" class="footer_btn"><span>view code</span></a>
-      <a href="#" class="footer_btn"><span>next</span></a>
+      <a href="https://jar3543.github.io/github/AreumJeon/work_dodream.html" class="footer_btn"><span>prev</span></a>
+      <a href="https://github.com/jar3543/github/tree/master/motte" class="footer_btn"><span>view code</span></a>
+      <a href="https://jar3543.github.io/github/AreumJeon/work_f&b.html" class="footer_btn"><span>next</span></a>
     </div>
     <!-- footer============================================================ -->
     <footer>
