--- a/AreumJeon/work_sidmool.html
+++ b/AreumJeon/work_sidmool.html
@@ -23,12 +23,10 @@
       padding-left: 15px;letter-spacing: 2px;transition: all 1s ease;}
     header .container .logo a:hover{color: #000;}
 
-
     .wrap_work{
       z-index: 1;
       position: relative;
       background-color: #fafafa;
-      /* padding-top: 150px; */
     }
 
 
@@ -54,7 +52,6 @@
       max-width: 1920px;
       margin: 0 auto;
       padding: 8% 9em 0 9em;
-      /* height: 100vh; */
       height: 100%;
       box-sizing: border-box;
     }
@@ -137,7 +134,6 @@
 
 
     /* 위로가기, 아래로가기 버튼 ============================================= */
-    /* 위로가기 버튼 goTop */
     #goTop{
       visibility: hidden;
       opacity: 0;
@@ -271,11 +267,10 @@
     <div class="wrap_work">
       <section id="top_box" class="top_box">
         <div class="container">
-          <span class="main_title1">FEATURED WORK - 1</span>
-          <h2 class="main_title2">F&B</h2>
+          <span class="main_title1">FEATURED WORK - 2</span>
+          <h2 class="main_title2">SIDMOOL</h2>
           <div class="info_title">
-            <!-- <p class="info_type">TYPE<span class="info_type_text">PUBLISHING</span></p> -->
-            <p class="info_role">ROLE |<span class="info_role_text">PUBLISHING(100%)</span></p>
+            <p class="info_role">ROLE |<span class="info_role_text">DESIGN(100%) PUBLISHING(100%)</span></p>
           </div>
         </div>
       </section>
@@ -291,24 +286,24 @@
           <div class="col-md-6 col-sm-6 col-xs-12 details_info">
             <dl class="col-md-6 col-sm-6 col-xs-12">
               <dt>TYPE</dt>
-              <dd>PC|TABLET| MOBILE</dd>
+              <dd>PC</dd>
             </dl>
             <dl class="col-md-6 col-sm-6 col-xs-12">
               <dt>ROLE</dt>
-              <dd>PUBLISHING</dd>
+              <dd>DESIGN(100%) PUBLISHING(100%)</dd>
             </dl>
             <dl class="col-md-12 col-sm-12 col-xs-12">
               <dt>OVERVIEW</dt>
-              <dd>반응형을 목적으로 제작하였습니다.</dd>
+              <dd>리뉴얼을 목적으로 제작하였습니다.</dd>
             </dl>
             <dl class="col-md-6 col-sm-6 col-xs-12">
               <dt>DURATION</dt>
-              <dd>2017.1</dd>
+              <dd>2017.2</dd>
             </dl>
             <!-- 사이트 링크 버튼,깃헙 링크 버튼 -->
             <div class="col-md-12 col-sm-12 col-xs-12 details_btn">
-              <a href="https://jar3543.github.io/github/F&B/F&B-000000.html" class="underlined">Demo<i class="fas fa-arrow-right"></i></a>
-              <a href="https://github.com/jar3543/github/tree/master/F%26B" class="underlined">github<i class="fas fa-arrow-right"></i></a>
+              <a href="https://jar3543.github.io/github/sidmool/index.html" class="underlined">Demo<i class="fas fa-arrow-right"></i></a>
+              <a href="https://github.com/jar3543/github/tree/master/sidmool" class="underlined">github<i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
         </div>
@@ -340,9 +335,9 @@
 
     <!-- footerbar==========================================================-->
     <div class="wow fadeInUp animated footerbar">
-      <a href="#" class="footer_btn"><span>prev</span></a>
-      <a href="#" class="footer_btn"><span>view code</span></a>
-      <a href="#" class="footer_btn"><span>next</span></a>
+      <a href="https://jar3543.github.io/github/AreumJeon/work_f&b.html" class="footer_btn"><span>prev</span></a>
+      <a href="https://github.com/jar3543/github/tree/master/sidmool" class="footer_btn"><span>view code</span></a>
+      <a href="https://jar3543.github.io/github/AreumJeon/work_dodream.html" class="footer_btn"><span>next</span></a>
     </div>
     <!-- footer============================================================ -->
     <footer>
