--- a/AreumJeon/work_dodream.html
+++ b/AreumJeon/work_dodream.html
@@ -307,8 +307,7 @@
             </dl>
             <!-- 사이트 링크 버튼,깃헙 링크 버튼 -->
             <div class="col-md-12 col-sm-12 col-xs-12 details_btn">
-              <a href="https://jar3543.github.io/github/F&B/F&B-000000.html" class="underlined">Demo<i class="fas fa-arrow-right"></i></a>
-              <a href="https://github.com/jar3543/github/tree/master/F%26B" class="underlined">github<i class="fas fa-arrow-right"></i></a>
+              <a href="https://pkdodream.com:5004/index.php" class="underlined">Demo<i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
         </div>
@@ -340,9 +339,9 @@
 
     <!-- footerbar==========================================================-->
     <div class="wow fadeInUp animated footerbar">
-      <a href="#" class="footer_btn"><span>prev</span></a>
-      <a href="#" class="footer_btn"><span>view code</span></a>
-      <a href="#" class="footer_btn"><span>next</span></a>
+      <a href="https://jar3543.github.io/github/AreumJeon/work_sidmool.html" class="footer_btn"><span>prev</span></a>
+      <a href="https://pkdodream.com:5004/index.php" class="footer_btn"><span>demo</span></a>
+      <a href="https://jar3543.github.io/github/AreumJeon/work_motte.html" class="footer_btn"><span>next</span></a>
     </div>
     <!-- footer============================================================ -->
     <footer>
