--- a/AreumJeon/work_f&b.html
+++ b/AreumJeon/work_f&b.html
@@ -129,15 +129,26 @@
       height: auto;
     }
 
+    .article_detail .detail_main{width: 100%;background: #9e9e9e;}
+    .article_detail .detail_main .shots{width: 100%; max-width: 1000px;margin:0 auto;
+      padding: 8em 10em 8em;box-sizing: border-box;background: #9e9e9e;}
+    .article_detail .detail_main .shots .shots_item{display: block;width: 100%;
+      margin: 12% auto 0;box-shadow: 0px 10px 30px rgb(54,49,49,0.15);}
+    .article_detail .detail_main .shots .unveiled{opacity: 1;}
+    .article_detail .detail_main .shots .shots_item .item_link{}
+    .article_detail .detail_main .shots .shots_item .item_link .shots_item_img{
+      display: block;width: 100%;height: auto;}
 
+    .article_detail .detail_main .slider{background-color: #111f6f;padding: 3em 9em;
+      position: relative;}
+    .slider_inner{position: relative;max-width: 1920px;width: 100%;
+      height: 100% !important;margin: 0 auto;padding: 0 3em;font-size: 16px;box-sizing: border-box;}
 
-    /* contents============================================================== */
 
 
 
 
     /* 위로가기, 아래로가기 버튼 ============================================= */
-    /* 위로가기 버튼 goTop */
     #goTop{
       visibility: hidden;
       opacity: 0;
@@ -320,11 +331,20 @@
           <div class="inner">
             <div class="detail_main">
               <ul class="shots">
-                <li><a href="#"></a></li>
+                <li class="shots_item unveiled">
+                  <a href="#" class="item_link">
+                    <img class="shots_item_img lazyload" src="images/work_f&b_intro_img.png" alt="f&b 메인 이미지">
+                    <img class="shots_item_img lazyload" src="images/work_f&b_index_img.png" alt="f&b 인트로 이미지">
+                  </a>
+                </li>
               </ul>
               <!-- swiper slide -->
               <div class="slider">
+                <div class="slider_inner">
+
+                </div>
               </div>
+              <!-- swiper slide end -->
             </div>
           </div>
           <!-- inner end -->
@@ -340,9 +360,9 @@
 
     <!-- footerbar==========================================================-->
     <div class="wow fadeInUp animated footerbar">
-      <a href="#" class="footer_btn"><span>prev</span></a>
-      <a href="#" class="footer_btn"><span>view code</span></a>
-      <a href="#" class="footer_btn"><span>next</span></a>
+      <a href="https://jar3543.github.io/github/AreumJeon/work_motte.html" class="footer_btn"><span>prev</span></a>
+      <a href="https://github.com/jar3543/github/tree/master/F%26B" class="footer_btn"><span>view code</span></a>
+      <a href="https://jar3543.github.io/github/AreumJeon/work_sidmool.html" class="footer_btn"><span>next</span></a>
     </div>
     <!-- footer============================================================ -->
     <footer>
