--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -236,11 +236,11 @@
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 item" data-category="PC">
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
-                      <img src="images/moote.png" alt="포트폴리오 작업물. moote 이미지" class="img-responsive">
-                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/work_moot.html"></a>
+                      <img src="images/motte.png" alt="포트폴리오 작업물. motte 이미지" class="img-responsive">
+                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/work_motte.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
-                          <a href="#">싱어송라이터<br><strong>MOOT</strong><br>소개페이지</a>
+                          <a href="#">싱어송라이터<br><strong>motte</strong><br>소개페이지</a>
                         </h3>
                         <h5 class="item_category">pc</h5>
                       </div>
