--- a/motte/motte.html
+++ b/motte/motte.html
@@ -29,7 +29,7 @@
     section .box{padding-top: 50px;height: 100vh;font-size: 3em;text-align: center;}
     section .box:nth-child(1){background: #fff;}
     section .box:nth-child(2){background: #fff;}
-    section .box:nth-child(3){background: #fff;}
+    section .box:nth-child(3){background: #fff;padding-top: 200px;}
     section .box:nth-child(4){background: #fff;}
     section div:nth-child(1) img{position: relative;top: 200px;}
     iframe{position: relative;top: 200px;
@@ -145,13 +145,13 @@
       <div class="box-rotate-wrap">
         <div class="boxi box-rotate box-rotate-right">
           <div class="front">
-            <img src="images/bosinoba.jpg" alt="">
+            <img src="images/album.jpg" alt="">
           </div>
           <div class="left">
-            <img src="images/cover1.JPG" alt="">
+            <img src="images/work_motte_02.jpg" alt="">
           </div>
           <div class="right">
-            <img src="images/cover2.JPG" alt="">
+            <img src="images/work_motte_03.jpg" alt="">
           </div>
         </div>
       </div>
@@ -166,40 +166,34 @@
         <li><p>INTRO</p><a href="#a">MOTTE</a></li>
         <li><p>SINGLE</p><a href="#b">backspace</a></li>
         <li><p>COVER</p><a href="#c">cover song</a></li>
-        <li><p>COVER IMAGES</p><a href="#d">images</a></li>
+        <li><p>IMAGES</p><a href="#d">albom</a></li>
       </ul>
     </nav>
 <!-- 컨텐츠영역 -->
   <section>
     <div id="a" class="box">
       <p class="contents">MOTTE</p>
-      <img src="images/song1.jpg" alt="">
+      <img src="images/work_motte_00.jpg" alt="">
     </div>
     <div id="b" class="box">
       <p>backspace(feat.marvin)</p>
       <iframe width="854" height="480" src="https://www.youtube.com/embed/VP7l6xIjfyk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
     <div id="c" class="box">
-      <p>cover song</p>
       <img src="images/album.jpg" alt="">
     </div>
     <div id="d" class="box">
-      <p>images</p>
-      <img src="images/cover1.jpg" alt="">
-      <img src="images/cover2.jpg" alt="">
+      <img src="images/work_motte_02.jpg" alt="">
+      <img src="images/work_motte_02.jpg" alt="">
     </div>
     <!-- 클릭하는 요소(class)와 이동해서 보여질 화면(id)로 맞춰준다 -->
     <div class="box st_flower" id="e">
       <div class="st_position">
-        <p>sohie</p>
         <a href="#e">
         <!-- fixed를 class로 써주면 첫화면에서 나타남 -->
         <i class="fa fa-plus-circle real" aria-hidden="true"></i></a>
-        <img src="images/bosinoba.jpg" class="real_img" alt="">
+        <img src="images/work_motte_01.jpg" class="real_img" alt="">
     </div>
     </div>
-
-
-
   </section>
 
     <!-- 위로가기 버튼 -->
