--- a/AreumJeon/work_dodream.html
+++ b/AreumJeon/work_dodream.html
@@ -37,15 +37,16 @@
       position: relative;
       width: 100%;
       max-width: 2560px;
-      height: 70vh;
+      height: 720px;
       margin: 0 auto;
       color: #5d5b5b;
       /* 백그라운드 고정 */
-      background-image: url(images/featuredwork2.jpg);
+      background-image: url(images/featuredwork3.jpg);
       background-color: #fff;
       background-repeat: no-repeat;
       background-size: cover;
       background-attachment: fixed;
+      background-position: 60% 0%;
       padding: 0;
     }
     .top_box .container{
@@ -54,27 +55,29 @@
       max-width: 1920px;
       margin: 0 auto;
       padding: 8% 9em 0 9em;
-      /* height: 100vh; */
       height: 100%;
       box-sizing: border-box;
+      background: rgba(0, 0, 0, .5);
+      opacity: .8;
     }
 
     .top_box .main_title1{
       font-size: 13px;
       position: absolute;
       left: 152px;
-      color: #9e9e9e;
+      color: #fff;
       font-size: 14px;
       font-weight: 300;
       text-transform: uppercase
     }
     .top_box .main_title2{font-size: 100px;font-weight: 500px;
-      transition: font-size .5s;}
+      transition: font-size .5s;color: #fff;}
 
     .top_box .info_title .info_role{font-size: 18px;margin-right: 5em;
-      color: #9e9e9e;letter-spacing: 0.05rem;}
+      color: #fff;letter-spacing: 0.05rem;}
     .top_box .info_title .info_role .info_role_text{font-size: 18px;font-weight: 300px;
-      color: #9e9e9e;margin-left: 0.5em;}
+      color: #fff;margin-left: 0.5em;}
+    .info_title{padding-left: 7px;}
 
 
 
@@ -129,15 +132,31 @@
       height: auto;
     }
 
+    .article_detail .detail_main{width: 100%;background: #f4f4f4;}
+    .article_detail .detail_main .shots{width: 100%; max-width: 1000px;margin:0 auto;
+      padding: 2em 2em 10em;box-sizing: border-box;background: #f4f4f4;}
+    .article_detail .detail_main .shots .shots_item{display: block;width: 100%;
+      margin: 12% auto 0;box-shadow: 0px 10px 30px rgb(54,49,49,0.15);}
+    .article_detail .detail_main .shots .unveiled{opacity: 1;}
+    .article_detail .detail_main .shots .shots_item .item_link{}
+    .article_detail .detail_main .shots .shots_item .item_link .shots_item_img{
+      display: block;width: 100%;height: auto;}
 
+    .article_detail .detail_main .slider{background-color: #f4f4f4;padding: 3em 9em;
+      position: relative;}
+    .slider_inner{position: relative;max-width: 1920px;width: 100%;
+      height: 100% !important;margin: 0 auto;padding: 0 3em;font-size: 16px;box-sizing: border-box;}
 
-    /* contents============================================================== */
+    .swiper-button-prev, .swiper-container-rtl .swiper-button-next{background-image: none;
+      left: -40px !important;font-size: 40px;}
+    .swiper-button-next, .swiper-container-rtl .swiper-button-prev{background-image: none;
+      right: -40px !important;font-size: 40px;}
+
 
 
 
 
     /* 위로가기, 아래로가기 버튼 ============================================= */
-    /* 위로가기 버튼 goTop */
     #goTop{
       visibility: hidden;
       opacity: 0;
@@ -191,7 +210,7 @@
     .footer_btn span::before,
     .footer_btn span::after{content: '';position: absolute;width: 0%;height: 2.5px;
       top: 27px;margin-top: -0.5px;background: #fff;}
-    .footer_btn span:hover::before{background: red;width: 100%;
+    .footer_btn span:hover::before{background: #f3f377;width: 100%;
       transition: width 0.6s cubic-bezier(0.23,0.61,0.36,1);}
     .footer_btn span:hover::after{background: transparent;width: 100%;transition: 0s;}
     .footer_btn span::before{left: -2.5px;}
@@ -233,7 +252,30 @@
 
     /* 모바일================================================================== */
     @media (max-width:767px) {
+
+      .top_box{height: 780px;}
+      .top_box .container{padding: 6em 3.5em 0 3.5em;}
+      .top_box .main_title1{left: 56px;}
+      .top_box .main_title2{margin-left: -5px;font-size: 50px;}
+      .info_title{padding-left: 0;}
+      .top_box .info_title .info_role{margin-right: 0;}
       .title2, .title3{font-size: 24px;}
+      .details{height: 800px; margin-top: 100px;}
+      .details .container{height: auto;}
+      .details .details_info{margin-top: 100px;}
+      .article_detail .detail_main .shots{padding: 2em 1.8em;}
+      .article_detail .detail_main .shots .shots_item{margin: 21% auto 0;}
+      .article_detail .detail_main .slider{padding: 2em 4em;}
+
+      .slider_inner{padding: 0;}
+      .swiper-button-prev, .swiper-container-rtl .swiper-button-next{
+        left: -30px !important;font-size: 20px;}
+      .swiper-button-next, .swiper-container-rtl .swiper-button-prev{
+        right: -40px !important;font-size: 20px;}
+
+
+
+
     }
 
 
@@ -246,6 +288,12 @@
       .top_box .main_tile span{font-size: 11px;}
       .top_box .main_tile h2{font-size: 50px;}
     }
+
+
+
+
+
+
 
 
 
@@ -271,11 +319,11 @@
     <div class="wrap_work">
       <section id="top_box" class="top_box">
         <div class="container">
-          <span class="main_title1">FEATURED WORK - 1</span>
-          <h2 class="main_title2">F&B</h2>
+          <span class="main_title1">FEATURED WORK - 3</span>
+          <h2 class="main_title2">DODREAM</h2>
           <div class="info_title">
             <!-- <p class="info_type">TYPE<span class="info_type_text">PUBLISHING</span></p> -->
-            <p class="info_role">ROLE |<span class="info_role_text">PUBLISHING(100%)</span></p>
+            <p class="info_role">ROLE |<span class="info_role_text">DESIGN(90%)</span></p>
           </div>
         </div>
       </section>
@@ -285,25 +333,25 @@
         <div class="container">
           <!-- img -->
           <div class="col-md-6 col-sm-6 col-xs-12 details_img">
-            <img src="images/F&B.png" alt="포트폴리오 각 미디어 별 이미지">
+            <img src="images/dodream.png" alt="포트폴리오 각 미디어 별 이미지">
           </div>
           <!-- info -->
           <div class="col-md-6 col-sm-6 col-xs-12 details_info">
             <dl class="col-md-6 col-sm-6 col-xs-12">
               <dt>TYPE</dt>
-              <dd>PC|TABLET| MOBILE</dd>
+              <dd>PC</dd>
             </dl>
             <dl class="col-md-6 col-sm-6 col-xs-12">
               <dt>ROLE</dt>
-              <dd>PUBLISHING</dd>
+              <dd>sub page design</dd>
             </dl>
             <dl class="col-md-12 col-sm-12 col-xs-12">
               <dt>OVERVIEW</dt>
-              <dd>반응형을 목적으로 제작하였습니다.</dd>
+              <dd>평광교회 두드림 청년부 홈페이지의 상세페이지를 제작하였습니다.</dd>
             </dl>
             <dl class="col-md-6 col-sm-6 col-xs-12">
               <dt>DURATION</dt>
-              <dd>2017.1</dd>
+              <dd>2017.11</dd>
             </dl>
             <!-- 사이트 링크 버튼,깃헙 링크 버튼 -->
             <div class="col-md-12 col-sm-12 col-xs-12 details_btn">
@@ -319,17 +367,57 @@
           <div class="inner">
             <div class="detail_main">
               <ul class="shots">
-                <li><a href="#"></a></li>
+                <li class="shots_item unveiled">
+                  <a href="#" class="item_link">
+                    <img class="shots_item_img lazyload" src="images/work_dodream_00.png" alt="dodream 상세페이지 이미지">
+                  </a>
+                </li>
+                <li class="shots_item unveiled">
+                  <a href="#" class="item_link">
+                    <img class="shots_item_img lazyload" src="images/work_dodream_01.png" alt="dodream dodream 이미지">
+                  </a>
+                </li>
+                <li class="shots_item unveiled">
+                  <a href="#" class="item_link">
+                    <img class="shots_item_img lazyload" src="images/work_dodream_02.png" alt="dodream 상세페이지 이미지">
+                  </a>
+                </li>
+                <li class="shots_item unveiled">
+                  <a href="#" class="item_link">
+                    <img class="shots_item_img lazyload" src="images/work_dodream_03.png" alt="dodream 상세페이지 이미지">
+                  </a>
+                </li>
+                <li class="shots_item unveiled">
+                  <a href="#" class="item_link">
+                    <img class="shots_item_img lazyload" src="images/work_dodream_04.png" alt="dodream 상세페이지 이미지">
+                  </a>
+                </li>
+                <li class="shots_item unveiled">
+                  <a href="#" class="item_link">
+                    <img class="shots_item_img lazyload" src="images/work_dodream_05.png" alt="dodream 상세페이지 이미지">
+                  </a>
+                </li>
+                <li class="shots_item unveiled">
+                  <a href="#" class="item_link">
+                    <img class="shots_item_img lazyload" src="images/work_dodream_06.png" alt="dodream 상세페이지 이미지">
+                  </a>
+                </li>
+                <li class="shots_item unveiled">
+                  <a href="#" class="item_link">
+                    <img class="shots_item_img lazyload" src="images/work_dodream_07.png" alt="dodream 상세페이지 이미지">
+                  </a>
+                </li>
+                <li class="shots_item unveiled">
+                  <a href="#" class="item_link">
+                    <img class="shots_item_img lazyload" src="images/work_dodream_08.png" alt="dodream 상세페이지 이미지">
+                  </a>
+                </li>
               </ul>
-              <!-- swiper slide -->
-              <div class="slider">
-              </div>
             </div>
           </div>
-          <!-- inner end -->
         </div>
-        <!-- article end -->
       </div>
+
 
       <!-- 위로가기,아래로가기 버튼 ============================================-->
       <button id="goTop"><i class="fas fa-arrow-up"></i></button>
@@ -360,39 +448,8 @@
 
     <!-- js -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script> -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-
-    <!-- <script src="js/jquery.min.js"></script> -->
-    <script src="js/swiper.min.js"></script>
-    <!-- <script src="js/star.js"></script> -->
     <script src="js/wow.min.js"></script>
-    <!-- <script src="js/isotope-docs.min.js"></script> -->
-    <!-- <script src="js/loading.js"></script> -->
-    <!-- <script src="js/portfolio.js"></script> -->
-    <!-- <script src="js/aboutmemore.js"></script> -->
-
-
     <script>
-    // 스와이퍼 ================================================================
-    var swiper1=new Swiper('.swiper1',{
-        navigation:{
-          nextEl:'.swiper-button-next',
-          prevEl:'.swiper-button-prev',
-        },
-        pagination:{
-          el:'.swiper-pagination',
-          clickable:true,
-          renderBullet:function(index, className){
-            return '<span class="'+className+'">'+(index+1)+'</span>';
-          },
-          type:'fraction'
-        }
-
-      });
-
 
       // 위로가기, 아래로가기 버튼================================================
       $(window).scroll(function(){
