--- a/AreumJeon/work_f&b.html
+++ b/AreumJeon/work_f&b.html
@@ -37,11 +37,11 @@
       position: relative;
       width: 100%;
       max-width: 2560px;
-      height: 70vh;
+      height: 720px;
       margin: 0 auto;
       color: #5d5b5b;
       /* 백그라운드 고정 */
-      background-image: url(images/featuredwork2.jpg);
+      background-image: url(images/featuredwork1.jpg);
       background-color: #fff;
       background-repeat: no-repeat;
       background-size: cover;
@@ -129,9 +129,9 @@
       height: auto;
     }
 
-    .article_detail .detail_main{width: 100%;background: #9e9e9e;}
+    .article_detail .detail_main{width: 100%;background: #f4f4f4;}
     .article_detail .detail_main .shots{width: 100%; max-width: 1000px;margin:0 auto;
-      padding: 8em 10em 8em;box-sizing: border-box;background: #9e9e9e;}
+      padding: 2em 2em 10em;box-sizing: border-box;background: #f4f4f4;}
     .article_detail .detail_main .shots .shots_item{display: block;width: 100%;
       margin: 12% auto 0;box-shadow: 0px 10px 30px rgb(54,49,49,0.15);}
     .article_detail .detail_main .shots .unveiled{opacity: 1;}
@@ -139,10 +139,15 @@
     .article_detail .detail_main .shots .shots_item .item_link .shots_item_img{
       display: block;width: 100%;height: auto;}
 
-    .article_detail .detail_main .slider{background-color: #111f6f;padding: 3em 9em;
+    .article_detail .detail_main .slider{background-color: #f4f4f4;padding: 3em 9em;
       position: relative;}
     .slider_inner{position: relative;max-width: 1920px;width: 100%;
       height: 100% !important;margin: 0 auto;padding: 0 3em;font-size: 16px;box-sizing: border-box;}
+
+    .swiper-button-prev, .swiper-container-rtl .swiper-button-next{background-image: none;
+      left: -40px !important;font-size: 40px;}
+    .swiper-button-next, .swiper-container-rtl .swiper-button-prev{background-image: none;
+      right: -40px !important;font-size: 40px;}
 
 
 
@@ -244,7 +249,29 @@
 
     /* 모바일================================================================== */
     @media (max-width:767px) {
+
+      .top_box{height: 780px;}
+      .top_box .container{padding: 6em 3.5em 0 3.5em;}
+      .top_box .main_title1{left: 60px;}
+      .top_box .main_title2{margin-left: -5px;}
+      .top_box .info_title .info_role{margin-right: 0;}
       .title2, .title3{font-size: 24px;}
+      .details{height: 800px; margin-top: 100px;}
+      .details .container{height: auto;}
+      .details .details_info{margin-top: 100px;}
+      .article_detail .detail_main .shots{padding: 2em 1.8em;}
+      .article_detail .detail_main .shots .shots_item{margin: 21% auto 0;}
+      .article_detail .detail_main .slider{padding: 2em 4em;}
+
+      .slider_inner{padding: 0;}
+      .swiper-button-prev, .swiper-container-rtl .swiper-button-next{
+        left: -30px !important;font-size: 20px;}
+      .swiper-button-next, .swiper-container-rtl .swiper-button-prev{
+        right: -40px !important;font-size: 20px;}
+
+
+
+
     }
 
 
@@ -310,7 +337,7 @@
             </dl>
             <dl class="col-md-12 col-sm-12 col-xs-12">
               <dt>OVERVIEW</dt>
-              <dd>반응형을 목적으로 제작하였습니다.</dd>
+              <dd>의류 쇼핑몰 사이트입니다. 반응형을 목적으로 제작하였습니다.</dd>
             </dl>
             <dl class="col-md-6 col-sm-6 col-xs-12">
               <dt>DURATION</dt>
@@ -334,22 +361,53 @@
                 <li class="shots_item unveiled">
                   <a href="#" class="item_link">
                     <img class="shots_item_img lazyload" src="images/work_f&b_intro_img.png" alt="f&b 메인 이미지">
+                  </a>
+                </li>
+                <li class="shots_item unveiled">
+                  <a href="#" class="item_link">
                     <img class="shots_item_img lazyload" src="images/work_f&b_index_img.png" alt="f&b 인트로 이미지">
                   </a>
                 </li>
               </ul>
-              <!-- swiper slide -->
               <div class="slider">
                 <div class="slider_inner">
+                  <div class="swiper-button-prev"><i class="fas fa-arrow-left"></i></div>
+                  <div class="swiper-button-next"><i class="fas fa-arrow-right"></i></div>
+                  <div class="swiper-container">
+                      <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                          <div class="swiper-zoom-container">
+                            <img src="images/f&b_m_00.png" alt="">
+                          </div>
+                        </div>
+                        <div class="swiper-slide">
+                          <div class="swiper-zoom-container">
+                            <img src="images/f&b_m_01.png" alt="">
+                          </div>
+                        </div>
+                        <div class="swiper-slide">
+                          <div class="swiper-zoom-container">
+                            <img src="images/f&b_m_02.png" alt="">
+                          </div>
+                        </div>
+                        <div class="swiper-slide">
+                          <div class="swiper-zoom-container">
+                            <img src="images/f&b_m_03.png" alt="">
+                          </div>
+                        </div>
+                        <div class="swiper-slide">
+                          <div class="swiper-zoom-container">
+                            <img src="images/f&b_m_04.png" alt="">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
 
                 </div>
               </div>
-              <!-- swiper slide end -->
             </div>
           </div>
-          <!-- inner end -->
         </div>
-        <!-- article end -->
       </div>
 
       <!-- 위로가기,아래로가기 버튼 ============================================-->
@@ -398,22 +456,22 @@
 
     <script>
     // 스와이퍼 ================================================================
-    var swiper1=new Swiper('.swiper1',{
-        navigation:{
-          nextEl:'.swiper-button-next',
-          prevEl:'.swiper-button-prev',
-        },
-        pagination:{
-          el:'.swiper-pagination',
-          clickable:true,
-          renderBullet:function(index, className){
-            return '<span class="'+className+'">'+(index+1)+'</span>';
+    var swiper = new Swiper('.swiper-container', {
+          zoom: true,
+          slidesPerView: 3,
+          centeredSlides: true,
+          spaceBetween: 30,
+          navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
           },
-          type:'fraction'
-        }
-
-      });
-
+          breakpoints: {
+          768: {
+            slidesPerView: 2,
+            spaceBetween: 30,
+          }
+        },
+        });
 
       // 위로가기, 아래로가기 버튼================================================
       $(window).scroll(function(){
