--- a/AreumJeon/work_sidmool.html
+++ b/AreumJeon/work_sidmool.html
@@ -23,10 +23,12 @@
       padding-left: 15px;letter-spacing: 2px;transition: all 1s ease;}
     header .container .logo a:hover{color: #000;}
 
+
     .wrap_work{
       z-index: 1;
       position: relative;
       background-color: #fafafa;
+      /* padding-top: 150px; */
     }
 
 
@@ -35,7 +37,7 @@
       position: relative;
       width: 100%;
       max-width: 2560px;
-      height: 70vh;
+      height: 720px;
       margin: 0 auto;
       color: #5d5b5b;
       /* 백그라운드 고정 */
@@ -52,6 +54,7 @@
       max-width: 1920px;
       margin: 0 auto;
       padding: 8% 9em 0 9em;
+      /* height: 100vh; */
       height: 100%;
       box-sizing: border-box;
     }
@@ -66,7 +69,7 @@
       text-transform: uppercase
     }
     .top_box .main_title2{font-size: 100px;font-weight: 500px;
-      transition: font-size .5s;}
+      transition: font-size .5s;color: #fff;}
 
     .top_box .info_title .info_role{font-size: 18px;margin-right: 5em;
       color: #9e9e9e;letter-spacing: 0.05rem;}
@@ -126,9 +129,25 @@
       height: auto;
     }
 
+    .article_detail .detail_main{width: 100%;background: #f4f4f4;}
+    .article_detail .detail_main .shots{width: 100%; max-width: 1000px;margin:0 auto;
+      padding: 2em 2em 10em;box-sizing: border-box;background: #f4f4f4;}
+    .article_detail .detail_main .shots .shots_item{display: block;width: 100%;
+      margin: 12% auto 0;box-shadow: 0px 10px 30px rgb(54,49,49,0.15);}
+    .article_detail .detail_main .shots .unveiled{opacity: 1;}
+    .article_detail .detail_main .shots .shots_item .item_link{}
+    .article_detail .detail_main .shots .shots_item .item_link .shots_item_img{
+      display: block;width: 100%;height: auto;}
 
+    .article_detail .detail_main .slider{background-color: #f4f4f4;padding: 3em 9em;
+      position: relative;}
+    .slider_inner{position: relative;max-width: 1920px;width: 100%;
+      height: 100% !important;margin: 0 auto;padding: 0 3em;font-size: 16px;box-sizing: border-box;}
 
-    /* contents============================================================== */
+    .swiper-button-prev, .swiper-container-rtl .swiper-button-next{background-image: none;
+      left: -40px !important;font-size: 40px;}
+    .swiper-button-next, .swiper-container-rtl .swiper-button-prev{background-image: none;
+      right: -40px !important;font-size: 40px;}
 
 
 
@@ -187,7 +206,7 @@
     .footer_btn span::before,
     .footer_btn span::after{content: '';position: absolute;width: 0%;height: 2.5px;
       top: 27px;margin-top: -0.5px;background: #fff;}
-    .footer_btn span:hover::before{background: red;width: 100%;
+    .footer_btn span:hover::before{background: #f3f377;width: 100%;
       transition: width 0.6s cubic-bezier(0.23,0.61,0.36,1);}
     .footer_btn span:hover::after{background: transparent;width: 100%;transition: 0s;}
     .footer_btn span::before{left: -2.5px;}
@@ -229,9 +248,26 @@
 
     /* 모바일================================================================== */
     @media (max-width:767px) {
-      .title2, .title3{font-size: 24px;}
-    }
 
+      .top_box{height: 780px;}
+      .top_box .container{padding: 6em 3.5em 0 3.5em;}
+      .top_box .main_title1{left: 60px;}
+      .top_box .main_title2{font-size: 60px;margin-left: -5px;}
+      .top_box .info_title .info_role{margin-right: 0;}
+      .title2, .title3{font-size: 24px;}
+      .details{height: 800px; margin-top: 100px;}
+      .details .container{height: auto;}
+      .details .details_info{margin-top: 100px;}
+      .article_detail .detail_main .shots{padding: 2em 1.8em;}
+      .article_detail .detail_main .shots .shots_item{margin: 21% auto 0;}
+      .article_detail .detail_main .slider{padding: 2em 4em;}
+
+      .slider_inner{padding: 0;}
+      .swiper-button-prev, .swiper-container-rtl .swiper-button-next{
+        left: -30px !important;font-size: 20px;}
+      .swiper-button-next, .swiper-container-rtl .swiper-button-prev{
+        right: -40px !important;font-size: 20px;}
+    }
 
     /* 태블릿================================================================== */
     @media (min-width:768px) and (max-width:1023px) {
@@ -315,16 +351,20 @@
           <div class="inner">
             <div class="detail_main">
               <ul class="shots">
-                <li><a href="#"></a></li>
+                <li class="shots_item unveiled">
+                  <a href="#" class="item_link">
+                    <img class="shots_item_img lazyload" src="images/work_sidmool_00.png" alt="f&b 메인 이미지">
+                  </a>
+                </li>
+                <li class="shots_item unveiled">
+                  <a href="#" class="item_link">
+                    <img class="shots_item_img lazyload" src="images/work_sidmool_01.png" alt="f&b 인트로 이미지">
+                  </a>
+                </li>
               </ul>
-              <!-- swiper slide -->
-              <div class="slider">
-              </div>
             </div>
           </div>
-          <!-- inner end -->
         </div>
-        <!-- article end -->
       </div>
 
       <!-- 위로가기,아래로가기 버튼 ============================================-->
@@ -373,21 +413,22 @@
 
     <script>
     // 스와이퍼 ================================================================
-    var swiper1=new Swiper('.swiper1',{
-        navigation:{
-          nextEl:'.swiper-button-next',
-          prevEl:'.swiper-button-prev',
-        },
-        pagination:{
-          el:'.swiper-pagination',
-          clickable:true,
-          renderBullet:function(index, className){
-            return '<span class="'+className+'">'+(index+1)+'</span>';
+    var swiper = new Swiper('.swiper-container', {
+          zoom: true,
+          slidesPerView: 3,
+          centeredSlides: true,
+          spaceBetween: 30,
+          navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
           },
-          type:'fraction'
-        }
-
-      });
+          breakpoints: {
+          768: {
+            slidesPerView: 2,
+            spaceBetween: 30,
+          }
+        },
+        });
 
 
       // 위로가기, 아래로가기 버튼================================================
