update dodream css

--- a/AreumJeon/work_dodream.html
+++ b/AreumJeon/work_dodream.html
@@ -355,7 +355,7 @@
             </dl>
             <!-- 사이트 링크 버튼,깃헙 링크 버튼 -->
             <div class="col-md-12 col-sm-12 col-xs-12 details_btn">
-              <a href="https://pkdodream.com:5004/index.php" class="underlined">Demo<i class="fas fa-arrow-right"></i></a>
+              <a href="https://pkdodream.com:5004/index.php" class="underlined">site<i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
         </div>
@@ -493,7 +493,7 @@
       // 클릭했을 때 맨아래로 가기
       $('#goDown').click(function(){
         $('html, body').animate({
-          scrollTop:15000
+          scrollTop:15100
         },800);
       })
 
