update dodream css

--- a/AreumJeon/work_dodream.html
+++ b/AreumJeon/work_dodream.html
@@ -355,7 +355,7 @@
             </dl>
             <!-- 사이트 링크 버튼,깃헙 링크 버튼 -->
             <div class="col-md-12 col-sm-12 col-xs-12 details_btn">
-              <a href="https://pkdodream.com:5004/index.php" class="underlined">site<i class="fas fa-arrow-right"></i></a>
+              <a href="https://pkdodream.com:5004/index.php" class="underlined">view site<i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
         </div>
@@ -428,7 +428,7 @@
     <!-- footerbar==========================================================-->
     <div class="wow fadeInUp animated footerbar">
       <a href="https://jar3543.github.io/github/AreumJeon/work_sidmool.html" class="footer_btn"><span>prev</span></a>
-      <a href="https://pkdodream.com:5004/index.php" class="footer_btn"><span>demo</span></a>
+      <a href="https://pkdodream.com:5004/index.php" class="footer_btn"><span>view site</span></a>
       <a href="https://jar3543.github.io/github/AreumJeon/work_motte.html" class="footer_btn"><span>next</span></a>
     </div>
     <!-- footer============================================================ -->
