--- a/AreumJeon/work_dodream.html
+++ b/AreumJeon/work_dodream.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>featured work</title>
-    <!-- <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/swiper.min.css">
@@ -28,7 +27,6 @@
       z-index: 1;
       position: relative;
       background-color: #fafafa;
-      /* padding-top: 150px; */
     }
 
 
@@ -40,14 +38,14 @@
       height: 720px;
       margin: 0 auto;
       color: #5d5b5b;
+      padding: 0;
       /* 백그라운드 고정 */
-      background-image: url(images/featuredwork3.jpg);
+      background-image: url(images/featuredwork1.jpg);
       background-color: #fff;
       background-repeat: no-repeat;
       background-size: cover;
       background-attachment: fixed;
-      background-position: 60% 0%;
-      padding: 0;
+      background-position: 50% 0%;
     }
     .top_box .container{
       position: relative;
@@ -57,27 +55,24 @@
       padding: 8% 9em 0 9em;
       height: 100%;
       box-sizing: border-box;
-      background: rgba(0, 0, 0, .5);
-      opacity: .8;
     }
 
     .top_box .main_title1{
       font-size: 13px;
       position: absolute;
       left: 152px;
-      color: #fff;
+      color: #9e9e9e;
       font-size: 14px;
       font-weight: 300;
       text-transform: uppercase
     }
     .top_box .main_title2{font-size: 100px;font-weight: 500px;
-      transition: font-size .5s;color: #fff;}
+      transition: font-size .5s;}
 
     .top_box .info_title .info_role{font-size: 18px;margin-right: 5em;
-      color: #fff;letter-spacing: 0.05rem;}
+      color: #9e9e9e;letter-spacing: 0.05rem;}
     .top_box .info_title .info_role .info_role_text{font-size: 18px;font-weight: 300px;
-      color: #fff;margin-left: 0.5em;}
-    .info_title{padding-left: 7px;}
+      color: #9e9e9e;margin-left: 0.5em;}
 
 
 
@@ -151,8 +146,6 @@
       left: -40px !important;font-size: 40px;}
     .swiper-button-next, .swiper-container-rtl .swiper-button-prev{background-image: none;
       right: -40px !important;font-size: 40px;}
-
-
 
 
 
@@ -239,7 +232,6 @@
     footer .sns li{float: left;width: 33.3%;}
     footer .sns li a img{border-radius: 30px;}
     footer .sns li a img:hover{
-      /* box-shadow: 0 14px 26px -12px rgba(0, 0, 0, 0.42); */
       transform: translate3d(0,-10px,0);}
     footer small{
       position: absolute;
@@ -255,9 +247,8 @@
 
       .top_box{height: 780px;}
       .top_box .container{padding: 6em 3.5em 0 3.5em;}
-      .top_box .main_title1{left: 56px;}
-      .top_box .main_title2{margin-left: -5px;font-size: 50px;}
-      .info_title{padding-left: 0;}
+      .top_box .main_title1{left: 60px;}
+      .top_box .main_title2{margin-left: -5px;}
       .top_box .info_title .info_role{margin-right: 0;}
       .title2, .title3{font-size: 24px;}
       .details{height: 800px; margin-top: 100px;}
@@ -273,32 +264,21 @@
       .swiper-button-next, .swiper-container-rtl .swiper-button-prev{
         right: -40px !important;font-size: 20px;}
 
-
-
-
     }
 
 
     /* 태블릿================================================================== */
     @media (min-width:768px) and (max-width:1023px) {
+
+      .top_box{height: 1400px;background-position: 50% 0%;}
       .top_box .container{
         padding-left: 7em;
-        padding-right: 7em;
-      }
-      .top_box .main_tile span{font-size: 11px;}
-      .top_box .main_tile h2{font-size: 50px;}
+        padding-right: 7em;}
+      .top_box .main_title1{left: 118px;}
+      .top_box .main_title2{font-size: 64px;}
+      .top_box .info_title .info_role{margin-left: 5px;}
+
     }
-
-
-
-
-
-
-
-
-
-
-
 
     </style>
   </head>
