--- a/AreumJeon/work_sidmool.html
+++ b/AreumJeon/work_sidmool.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>featured work - sidmool</title>
-    <!-- <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/swiper.min.css">
@@ -28,7 +27,6 @@
       z-index: 1;
       position: relative;
       background-color: #fafafa;
-      /* padding-top: 150px; */
     }
 
 
@@ -40,13 +38,14 @@
       height: 720px;
       margin: 0 auto;
       color: #5d5b5b;
+      padding: 0;
       /* 백그라운드 고정 */
-      background-image: url(images/featuredwork2.jpg);
+      background-image: url(images/featuredwork1.jpg);
       background-color: #fff;
       background-repeat: no-repeat;
       background-size: cover;
       background-attachment: fixed;
-      padding: 0;
+      background-position: 50% 0%;
     }
     .top_box .container{
       position: relative;
@@ -54,7 +53,6 @@
       max-width: 1920px;
       margin: 0 auto;
       padding: 8% 9em 0 9em;
-      /* height: 100vh; */
       height: 100%;
       box-sizing: border-box;
     }
@@ -69,7 +67,7 @@
       text-transform: uppercase
     }
     .top_box .main_title2{font-size: 100px;font-weight: 500px;
-      transition: font-size .5s;color: #fff;}
+      transition: font-size .5s;}
 
     .top_box .info_title .info_role{font-size: 18px;margin-right: 5em;
       color: #9e9e9e;letter-spacing: 0.05rem;}
@@ -148,7 +146,6 @@
       left: -40px !important;font-size: 40px;}
     .swiper-button-next, .swiper-container-rtl .swiper-button-prev{background-image: none;
       right: -40px !important;font-size: 40px;}
-
 
 
 
@@ -235,7 +232,6 @@
     footer .sns li{float: left;width: 33.3%;}
     footer .sns li a img{border-radius: 30px;}
     footer .sns li a img:hover{
-      /* box-shadow: 0 14px 26px -12px rgba(0, 0, 0, 0.42); */
       transform: translate3d(0,-10px,0);}
     footer small{
       position: absolute;
@@ -252,7 +248,7 @@
       .top_box{height: 780px;}
       .top_box .container{padding: 6em 3.5em 0 3.5em;}
       .top_box .main_title1{left: 60px;}
-      .top_box .main_title2{font-size: 60px;margin-left: -5px;}
+      .top_box .main_title2{margin-left: -5px;}
       .top_box .info_title .info_role{margin-right: 0;}
       .title2, .title3{font-size: 24px;}
       .details{height: 800px; margin-top: 100px;}
@@ -267,24 +263,24 @@
         left: -30px !important;font-size: 20px;}
       .swiper-button-next, .swiper-container-rtl .swiper-button-prev{
         right: -40px !important;font-size: 20px;}
+
     }
+
 
     /* 태블릿================================================================== */
     @media (min-width:768px) and (max-width:1023px) {
+
+      .top_box{height: 1400px;background-position: 50% 0%;}
       .top_box .container{
         padding-left: 7em;
-        padding-right: 7em;
-      }
-      .top_box .main_tile span{font-size: 11px;}
-      .top_box .main_tile h2{font-size: 50px;}
+        padding-right: 7em;}
+      .top_box .main_title1{left: 118px;}
+      .top_box .main_title2{font-size: 64px;}
+      .top_box .info_title .info_role{margin-left: 5px;}
+
     }
 
-
-
-
-
-
-    </style>
+   </style>
   </head>
   <body>
 
@@ -396,21 +392,8 @@
 
     <!-- js -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script> -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-
-    <!-- <script src="js/jquery.min.js"></script> -->
     <script src="js/swiper.min.js"></script>
-    <!-- <script src="js/star.js"></script> -->
     <script src="js/wow.min.js"></script>
-    <!-- <script src="js/isotope-docs.min.js"></script> -->
-    <!-- <script src="js/loading.js"></script> -->
-    <!-- <script src="js/portfolio.js"></script> -->
-    <!-- <script src="js/aboutmemore.js"></script> -->
-
-
     <script>
     // 스와이퍼 ================================================================
     var swiper = new Swiper('.swiper-container', {
