--- a/portfolio/work_motte.html
+++ b/portfolio/work_motte.html
@@ -40,8 +40,7 @@
       color: #5d5b5b;
       padding: 0;
       /* 백그라운드 고정 */
-      background-image: url(images/featuredwork1.jpg);
-      background-color: #fff;
+      background-color: whitesmoke;
       background-repeat: no-repeat;
       background-size: cover;
       background-attachment: fixed;
