--- a/portfolio/work_sidmool.html
+++ b/portfolio/work_sidmool.html
@@ -40,7 +40,7 @@
       color: #5d5b5b;
       padding: 0;
       /* 백그라운드 고정 */
-      background-image: url(images/featuredwork1.jpg);
+      background-image: url(images/featuredwork2.jpg);
       background-color: #fff;
       background-repeat: no-repeat;
       background-size: cover;
@@ -67,10 +67,10 @@
       text-transform: uppercase
     }
     .top_box .main_title2{font-size: 100px;font-weight: 500px;
-      transition: font-size .5s;}
+      transition: font-size .5s;color: #fff;}
 
     .top_box .info_title .info_role{font-size: 18px;margin-right: 5em;
-      color: #9e9e9e;letter-spacing: 0.05rem;}
+      color: #9e9e9e;letter-spacing: 0.05rem;margin-left: 5px;}
     .top_box .info_title .info_role .info_role_text{font-size: 18px;font-weight: 300px;
       color: #9e9e9e;margin-left: 0.5em;}
 
@@ -278,6 +278,8 @@
       .top_box .main_title2{font-size: 64px;}
       .top_box .info_title .info_role{margin-left: 5px;}
 
+      .details .details_btn a.underlined{margin-right: 0px;}
+
     }
 
    </style>
@@ -312,7 +314,7 @@
         <div class="container">
           <!-- img -->
           <div class="col-md-6 col-sm-6 col-xs-12 details_img">
-            <img src="images/F&B.png" alt="포트폴리오 각 미디어 별 이미지">
+            <img src="images/sidmool_main.png" alt="포트폴리오 각 미디어 별 이미지">
           </div>
           <!-- info -->
           <div class="col-md-6 col-sm-6 col-xs-12 details_info">
@@ -334,7 +336,8 @@
             </dl>
             <!-- 사이트 링크 버튼,깃헙 링크 버튼 -->
             <div class="col-md-12 col-sm-12 col-xs-12 details_btn">
-              <a href="https://jar3543.github.io/github/sidmool/index.html" class="underlined">Demo<i class="fas fa-arrow-right"></i></a>
+              <a href="https://jar3543.github.io/github/sidmool/index.html" class="underlined">main page<i class="fas fa-arrow-right"></i></a>
+              <a href="https://jar3543.github.io/github/sidmool/sub.html" class="underlined">sub page<i class="fas fa-arrow-right"></i></a>
               <a href="https://github.com/jar3543/github/tree/master/sidmool" class="underlined">github<i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
