--- a/portfolio/work_dodream.html
+++ b/portfolio/work_dodream.html
@@ -40,7 +40,7 @@
       color: #5d5b5b;
       padding: 0;
       /* 백그라운드 고정 */
-      background-image: url(images/featuredwork1.jpg);
+      background-image: url(images/featuredwork3.jpg);
       background-color: #fff;
       background-repeat: no-repeat;
       background-size: cover;
@@ -55,24 +55,26 @@
       padding: 8% 9em 0 9em;
       height: 100%;
       box-sizing: border-box;
+      background: #504f4f;
+      opacity: .8;
     }
 
     .top_box .main_title1{
       font-size: 13px;
       position: absolute;
       left: 152px;
-      color: #9e9e9e;
+      color: #fff;
       font-size: 14px;
       font-weight: 300;
       text-transform: uppercase
     }
     .top_box .main_title2{font-size: 100px;font-weight: 500px;
-      transition: font-size .5s;}
+      transition: font-size .5s;color: #000;}
 
-    .top_box .info_title .info_role{font-size: 18px;margin-right: 5em;
-      color: #9e9e9e;letter-spacing: 0.05rem;}
+      .top_box .info_title .info_role{font-size: 18px;margin-right: 5em;
+        color: #fff;letter-spacing: 0.05rem;margin-left: 5px;}
     .top_box .info_title .info_role .info_role_text{font-size: 18px;font-weight: 300px;
-      color: #9e9e9e;margin-left: 0.5em;}
+      color: #fff;margin-left: 0.5em;}
 
 
 
