--- a/portfolio/work_f&b.html
+++ b/portfolio/work_f&b.html
@@ -245,7 +245,7 @@
     /* 모바일================================================================== */
     @media (max-width:767px) {
 
-      .top_box{height: 780px;}
+      .top_box{height: 780px;background-size: auto;}
       .top_box .container{padding: 6em 3.5em 0 3.5em;}
       .top_box .main_title1{left: 60px;}
       .top_box .main_title2{margin-left: -5px;}
