--- a/portfolio/work_dodream.html
+++ b/portfolio/work_dodream.html
@@ -292,7 +292,7 @@
       <div class="container">
         <h1 class="logo">
           <!-- 클릭하면 index.html로 이동 -->
-          <a href="#">HOME</a>
+          <a href="https://jar3543.github.io/github/portfolio/index.html">HOME</a>
         </h1>
       </div>
     </header>
