--- a/gentlemonster/index.html
+++ b/gentlemonster/index.html
@@ -33,7 +33,7 @@
 			<!-- 팝업 -->
 			<div class="popup popup_login">
 				<button class="cancel"><i class="fas fa-times"></i><span class="skip">닫기</span></button>
-				<div class="popup-body">
+				<div class="popup_body">
 					<form action="index.html">
 						<label for="id" class=""><span class="skip">아이디</span></label>
 						<input type="text" placeholder="아이디" id="id">
